--- a/src/css/style.css
+++ b/src/css/style.css
@@ -83,33 +83,29 @@ body {
   -webkit-background-clip: text;
   color: transparent; }
   .heading-secondary:hover {
-    transform: skewY(0.5deg) skewX(2deg) scale(1.05); }
+    transform: skewY(0.5deg) skewX(2deg) scale(1.05);
+    text-shadow: 0.5rem 1rem 2rem rgba(0, 0, 0, 0.2); }
+
+.heading-tertiary {
+  font-size: 1.6rem;
+  font-weight: 700;
+  text-transform: uppercase; }
+
+.paragraph {
+  font-size: 1.4rem; }
+  .paragraph:not(:last-child) {
+    margin-bottom: 3rem; }
 
 .u-center-text {
   text-align: center; }
 
-.u-margin-bottom-1 {
-  margin-bottom: 1rem; }
+.u-margin-bottom-small {
+  margin-bottom: 1.5rem; }
 
-.u-margin-bottom-2 {
-  margin-bottom: 2rem; }
-
-.u-margin-bottom-3 {
-  margin-bottom: 3rem; }
-
-.u-margin-bottom-4 {
+.u-margin-bottom-medium {
   margin-bottom: 4rem; }
 
-.u-margin-bottom-5 {
-  margin-bottom: 5rem; }
-
-.u-margin-bottom-6 {
-  margin-bottom: 6rem; }
-
-.u-margin-bottom-7 {
-  margin-bottom: 7rem; }
-
-.u-margin-bottom-8 {
+.u-margin-bottom-large {
   margin-bottom: 8rem; }
 
 .btn:link, .btn:visited {
