--- a/src/css/style.css
+++ b/src/css/style.css
@@ -92,7 +92,7 @@ body {
   text-transform: uppercase; }
 
 .paragraph {
-  font-size: 1.4rem; }
+  font-size: 1.6rem; }
   .paragraph:not(:last-child) {
     margin-bottom: 3rem; }
 
@@ -150,6 +150,19 @@ body {
 .btn--animated {
   animation: moveInBottom 1.7s ease-out 0.75s;
   animation-fill-mode: backwards; }
+
+.btn-text:link, .btn-text:visited {
+  font-size: 1.6rem;
+  color: #55c57a;
+  display: inline-block;
+  text-decoration: none;
+  border-bottom: 1px solid #55c57a;
+  padding: 3px; }
+
+.btn-text:hover {
+  background-color: #55c57a;
+  color: #fff;
+  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.15); }
 
 .row {
   max-width: 114rem;
