--- a/src/sass/components/_button.scss
+++ b/src/sass/components/_button.scss
@@ -75,15 +75,20 @@
     text-decoration: none;
     // Very small units like the following two do not have to be rem because we don't want things like this to change when the base font size changes
     border-bottom: 1px solid $color-primary;
-    padding: 3px;
+    border-radius: 5px; // A#####
+    padding: 3px 5px; // C#####
+    transition: all 0.2s;
   }
 
   &:hover {
     background-color: $color-primary;
     color: $color-white;
     box-shadow: 0 1rem 2rem rgba($color-black, 0.15);
+    transform: translateY(-2px);
   }
 
   &:active {
+    box-shadow: 0 1rem 1rem rgba($color-black, 0.15);
+    transform: translateY(-0.5px);
   }
 }
