imported images for the three image composition in the about section

--- a/src/sass/base/_typography.scss
+++ b/src/sass/base/_typography.scss
@@ -48,6 +48,8 @@ body {
   text-transform: uppercase;
   display: inline-block;
 
+  transition: all 0.05s;
+
   @include text-gradient(45deg, $color-primary-light, $color-primary-dark);
 
   // heading-secondary:hover
