--- a/src/css/style.css
+++ b/src/css/style.css
@@ -79,6 +79,7 @@ body {
   font-size: 3.5rem;
   text-transform: uppercase;
   display: inline-block;
+  transition: all 0.05s;
   background-image: linear-gradient(45deg, #7ed56f, #28b485);
   -webkit-background-clip: text;
   color: transparent; }
