--- a/src/css/style.css
+++ b/src/css/style.css
@@ -172,6 +172,11 @@ body {
   box-shadow: 0 1rem 1rem rgba(0, 0, 0, 0.15);
   transform: translateY(-0.5px); }
 
+.composition__photo {
+  width: 55%;
+  box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.4);
+  border-radius: 2px; }
+
 .row {
   max-width: 114rem;
   margin: 0 auto; }
