--- a/src/css/style.css
+++ b/src/css/style.css
@@ -172,10 +172,13 @@ body {
   box-shadow: 0 1rem 1rem rgba(0, 0, 0, 0.15);
   transform: translateY(-0.5px); }
 
-.composition__photo {
-  width: 55%;
-  box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.4);
-  border-radius: 2px; }
+.composition {
+  position: relative; }
+  .composition__photo {
+    width: 55%;
+    box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.4);
+    border-radius: 2px;
+    position: absolute; }
 
 .row {
   max-width: 114rem;
