--- a/src/sass/components/_composition.scss
+++ b/src/sass/components/_composition.scss
@@ -1,7 +1,9 @@
 .composition {
+  position: relative;
   &__photo {
     width: 55%;
     box-shadow: 0 1.5rem 4rem rgba($color-black, 0.4);
     border-radius: 2px;
+    position: absolute; // Will be set abolutely, relative to nearest parent with position: relative
   }
 }
