--- a/src/sass/components/_composition.scss
+++ b/src/sass/components/_composition.scss
@@ -1,9 +1,32 @@
 .composition {
   position: relative;
+
   &__photo {
     width: 55%;
     box-shadow: 0 1.5rem 4rem rgba($color-black, 0.4);
     border-radius: 2px;
-    position: absolute; // Will be set abolutely, relative to nearest parent with position: relative
+    position: absolute; // Will be set abolutely, relative to nearest parent with position: relative\
+
+    background-color: transparent;
+
+    transition: 0.2s;
+
+    &:hover {
+      border: 1rem solid $color-primary;
+      transform: scale(1.2);
+    }
+
+    &--p1 {
+      left: 0;
+      top: -2rem;
+    }
+    &--p2 {
+      right: 0;
+      top: 2rem;
+    }
+    &--p3 {
+      left: 20%;
+      top: 10rem;
+    }
   }
 }
