--- a/src/css/style.css
+++ b/src/css/style.css
@@ -174,16 +174,21 @@ body {
 
 .composition {
   position: relative; }
+  .composition:hover .composition__photo {
+    opacity: 0.2; }
+    .composition:hover .composition__photo:hover {
+      opacity: 1; }
   .composition__photo {
     width: 55%;
     box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.4);
     border-radius: 2px;
     position: absolute;
-    background-color: transparent;
-    transition: 0.2s; }
+    z-index: 10;
+    transition: 0.6s, 0.2s; }
     .composition__photo:hover {
-      border: 1rem solid #55c57a;
-      transform: scale(1.2); }
+      transform: scale(1.4);
+      box-shadow: 0 2.5rem 4rem rgba(0, 0, 0, 0.5);
+      z-index: 20; }
     .composition__photo--p1 {
       left: 0;
       top: -2rem; }
