--- a/src/css/style.css
+++ b/src/css/style.css
@@ -174,21 +174,14 @@ body {
 
 .composition {
   position: relative; }
-  .composition:hover .composition__photo {
-    opacity: 0.2; }
-    .composition:hover .composition__photo:hover {
-      opacity: 1; }
   .composition__photo {
     width: 55%;
     box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.4);
     border-radius: 2px;
     position: absolute;
     z-index: 10;
-    transition: 0.6s, 0.2s; }
-    .composition__photo:hover {
-      transform: scale(1.4);
-      box-shadow: 0 2.5rem 4rem rgba(0, 0, 0, 0.5);
-      z-index: 20; }
+    transition: 0.6s, 0.2s;
+    outline-offset: 2rem; }
     .composition__photo--p1 {
       left: 0;
       top: -2rem; }
@@ -198,6 +191,14 @@ body {
     .composition__photo--p3 {
       left: 20%;
       top: 10rem; }
+    .composition__photo:hover {
+      outline: 1.5rem solid #55c57a;
+      transform: scale(1.4);
+      box-shadow: 0 2.5rem 4rem rgba(0, 0, 0, 0.5);
+      z-index: 20; }
+  .composition:hover .composition__photo:not(:hover) {
+    opacity: 0.2;
+    transform: scale(0.8); }
 
 .row {
   max-width: 114rem;
