--- a/src/sass/components/_composition.scss
+++ b/src/sass/components/_composition.scss
@@ -1,14 +1,7 @@
 .composition {
   position: relative;
 
-  &:hover {
-    .composition__photo {
-      opacity: 0.2;
-      &:hover {
-        opacity: 1;
-      }
-    }
-  }
+  // A#####
 
   &__photo {
     width: 55%;
@@ -17,12 +10,7 @@
     position: absolute; // Will be set abolutely, relative to nearest parent with position: relative\
     z-index: 10;
     transition: 0.6s, 0.2s;
-
-    &:hover {
-      transform: scale(1.4);
-      box-shadow: 0 2.5rem 4rem rgba($color-black, 0.5);
-      z-index: 20;
-    }
+    outline-offset: 2rem;
 
     &--p1 {
       left: 0;
@@ -36,5 +24,19 @@
       left: 20%;
       top: 10rem;
     }
+
+    &:hover {
+      outline: 1.5rem solid $color-primary;
+      transform: scale(1.4);
+      box-shadow: 0 2.5rem 4rem rgba($color-black, 0.5);
+      z-index: 20;
+    }
+  }
+
+  // Select the composition element when hovered, but select only the composition__photo elements that are NOT hovered
+  // Essentially all the elements of the composition that aren't hovered
+  &:hover &__photo:not(:hover) {
+    opacity: 0.2;
+    transform: scale(0.8);
   }
 }
