--- a/src/sass/base/_animations.scss
+++ b/src/sass/base/_animations.scss
@@ -52,3 +52,18 @@
     transform: translateY(0);
   }
 }
+
+@keyframes compositionOpacity {
+  0% {
+    opacity: 1;
+  }
+
+  20% {
+    opacity: 0.4;
+  }
+
+  100% {
+    opacity: 0.2;
+    transform: scale(0.8);
+  }
+}
