--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -11,6 +11,7 @@
 
 @import './components/button';
 @import './components/composition';
+@import './components/feature-box';
 
 @import './layout/grid';
 @import './layout/header';
