--- a/src/css/style.css
+++ b/src/css/style.css
@@ -260,3 +260,12 @@ body {
   background-color: #f7f7f7;
   padding: 25rem 0;
   margin-top: -20vh; }
+
+.section-features {
+  height: 95vh;
+  padding: 20rem 0;
+  background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)), url(../images/nat-4.jpg);
+  background-size: cover;
+  background-position: top;
+  clip-path: polygon(0 15vh, 100% 0, 100% 85vh, 0 100%);
+  position: relative; }
