finished a feature box card component

--- a/src/sass/abstracts/_mixins.scss
+++ b/src/sass/abstracts/_mixins.scss
@@ -14,6 +14,6 @@
 // This mixin takes in arguments and will result in text with a gradient coloring
 @mixin text-gradient($direction, $colorOne, $colorTwo) {
   background-image: linear-gradient($direction, $colorOne, $colorTwo);
-  -webkit-background-clip: text;
+  background-clip: text;
   color: transparent;
 }
