--- a/src/css/style.css
+++ b/src/css/style.css
@@ -81,7 +81,7 @@ body {
   display: inline-block;
   transition: all 0.05s;
   background-image: linear-gradient(45deg, #7ed56f, #28b485);
-  -webkit-background-clip: text;
+  background-clip: text;
   color: transparent; }
   .heading-secondary:hover {
     transform: skewY(0.5deg) skewX(2deg) scale(1.05);
@@ -205,9 +205,19 @@ body {
   background-color: rgba(255, 255, 255, 0.8);
   font-size: 1.5rem;
   padding: 2.5rem;
-  text-emphasis: center;
+  text-align: center;
   border-radius: 3px;
-  box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15); }
+  box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
+  transition: transform 0.3s; }
+  .feature-box__icon {
+    font-size: 6rem;
+    margin-bottom: 0.5rem;
+    display: inline-block;
+    background-image: linear-gradient(90deg, #7ed56f, #28b485);
+    background-clip: text;
+    color: transparent; }
+  .feature-box:hover {
+    transform: translateY(-1.5rem) scale(1.03); }
 
 .row {
   max-width: 114rem;
@@ -262,7 +272,7 @@ body {
 
 .section-features {
   height: 95vh;
-  padding: 20rem 0;
+  padding: 20rem 1rem;
   background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)), url(../images/nat-4.jpg);
   background-size: cover;
   /*   background-position: top; // The top of the background image will always stay at the top of the container and crop out the bottom
