--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -8,7 +8,7 @@
 
 .section-features {
   height: 95vh;
-  padding: 20rem;
+  padding: 20rem 0;
 
   background-image: linear-gradient(
       to right bottom,
