--- a/src/css/style.css
+++ b/src/css/style.css
@@ -275,11 +275,6 @@ body {
   padding: 20rem 0;
   background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)), url(../images/nat-4.jpg);
   background-size: cover;
-  /*   background-position: top; // The top of the background image will always stay at the top of the container and crop out the bottom
-  clip-path: polygon(
-    0 15vh,
-    100% 0,
-    100% 85vh,
-    0 100%
-  ); // Defines corners of the element from top left going clockwise
-  position: relative; */ }
+  transform: skewY(-7deg); }
+  .section-features > * {
+    transform: skewY(7deg); }
