--- a/src/css/style.css
+++ b/src/css/style.css
@@ -275,6 +275,7 @@ body {
   padding: 20rem 0;
   background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)), url(../images/nat-4.jpg);
   background-size: cover;
-  transform: skewY(-7deg); }
+  transform: skewY(-7deg);
+  margin-top: -12rem; }
   .section-features > * {
     transform: skewY(7deg); }
