--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -23,11 +23,17 @@
   transform: skewY(-7deg);
 
   // This is to move up the skewed section to hide the white box background
-  margin-top: -12rem;
+  margin-top: -10rem; // A#####
 
   // This is the direct child (>) selector, selecting EVERYTHING (*)
   // Basically this is unskewing everything inside the DIRECT (first) child (which is the 'row' div) of the section-features
   & > * {
     transform: skewY(7deg);
   }
+}
+
+.section-hikes {
+  background-color: $color-grey-light-1;
+  padding: 25rem 0 50rem 0;
+  margin-top: -10rem; // To cover up the white space left by the skewed section
 }
