applied gradient to the backsides of the first card

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -237,8 +237,9 @@ body {
     .card__side--front {
       background-color: #fff; }
     .card__side--back {
-      background-color: green;
       transform: rotateY(180deg); }
+      .card__side--back-1 {
+        background-image: linear-gradient(to right bottom, #ffb900, #ff7730); }
   .card:hover .card__side--front {
     transform: rotateY(180deg); }
   .card:hover .card__side--back {
