--- a/src/sass/components/_card.scss
+++ b/src/sass/components/_card.scss
@@ -27,8 +27,15 @@
     }
 
     &--back {
-      background-color: green;
       transform: rotateY(180deg);
+
+      &-1 {
+        background-image: linear-gradient(
+          to right bottom,
+          $color-secondary-light,
+          $color-secondary-dark
+        );
+      }
     }
   }
 
