--- a/src/css/style.css
+++ b/src/css/style.css
@@ -225,7 +225,6 @@ body {
   position: relative;
   height: 50rem; }
   .card__side {
-    font-size: 2rem;
     height: 50rem;
     transition: all 0.8s ease;
     position: absolute;
@@ -253,6 +252,7 @@ body {
   .card__picture {
     background-size: cover;
     height: 23rem;
+    -webkit-clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
     clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%); }
     .card__picture--1 {
       background-image: linear-gradient(to right bottom, #ffb900, #ff7730), url(../images/nat-5.jpg);
@@ -263,6 +263,13 @@ body {
     .card__picture--3 {
       background-image: linear-gradient(to right bottom, #2998ff, #5643fa), url(../images/nat-7.jpg);
       background-blend-mode: screen; }
+  .card__heading {
+    font-size: 2.8rem;
+    font-weight: 300;
+    text-transform: uppercase;
+    text-align: right;
+    color: #fff;
+    background: linear-gradient(to right, #ffb900, #ff7730); }
 
 .row {
   max-width: 114rem;
