--- a/src/sass/components/_card.scss
+++ b/src/sass/components/_card.scss
@@ -5,11 +5,11 @@
 
   position: relative; // For the card sides to be exact (front & back) but also the heading placement
 
-  height: 50rem; // Have to declare a height to each card because absolute positioning took the children out of normal flow (like floats), so there is nothing to encompass, so it doesn't
+  height: 52rem; // Have to declare a height to each card because absolute positioning took the children out of normal flow (like floats), so there is nothing to encompass, so it doesn't
 
   // COMMON TO ALL CARDS
   &__side {
-    height: 50rem;
+    height: 52rem;
     transition: all 0.8s ease;
 
     // Positioned absolutely based on the card class, since it fully encompasses
@@ -156,9 +156,38 @@
   }
 
   &__details {
+    padding: 3rem;
     ul {
+      list-style: none;
+      width: 80%; // So that the underlining does not expand the entire width of the card
+      margin: 0 auto; // Best way to center a block element inside a block element
+
       li {
+        text-align: center;
+        font-size: 1.5rem;
+        padding: 1rem;
+
+        &:not(:last-child) {
+          border-bottom: 1px solid $color-grey-light-2;
+        }
       }
     }
+  }
+
+  // BACK SIDE STYLING
+  &__cta {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+
+  &__price-box {
+  }
+
+  &__price-only {
+  }
+
+  &__price_value {
   }
 }
