--- a/src/sass/components/_card.scss
+++ b/src/sass/components/_card.scss
@@ -180,14 +180,22 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    width: 90%;
+    text-align: center;
   }
 
   &__price-box {
+    color: $color-white;
+    margin-bottom: 8rem;
   }
 
   &__price-only {
+    font-size: 1.4rem;
+    text-transform: uppercase;
   }
 
-  &__price_value {
+  &__price-value {
+    font-size: 6rem;
+    font-weight: 100;
   }
 }
