moved some css to a different element because it made more sense and achieved the same effect and also added a green button modifier to the btn class for the bottom of the hikes section

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -109,6 +109,9 @@ body {
 .u-margin-bottom-large {
   margin-bottom: 8rem; }
 
+.u-margin-top-large {
+  margin-top: 8rem; }
+
 .btn:link, .btn:visited {
   text-transform: uppercase;
   text-decoration: none;
@@ -147,6 +150,12 @@ body {
   color: #777; }
   .btn--white::after {
     background-color: #fff; }
+
+.btn--green {
+  background-color: #55c57a;
+  color: #fff; }
+  .btn--green::after {
+    background-color: #55c57a; }
 
 .btn--animated {
   animation: moveInBottom 1.7s ease-out 0.75s;
