hikes section done, created the boilerplate for the stories section

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -112,6 +112,9 @@ body {
 .u-margin-top-large {
   margin-top: 8rem; }
 
+.u-margin-top-xl {
+  margin-top: 10rem; }
+
 .btn:link, .btn:visited {
   text-transform: uppercase;
   text-decoration: none;
@@ -382,5 +385,5 @@ body {
 
 .section-hikes {
   background-color: #f7f7f7;
-  padding: 25rem 0 50rem 0;
+  padding: 25rem 0 15rem 0;
   margin-top: -10rem; }
