--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -13,6 +13,7 @@
 @import './components/composition';
 @import './components/feature-box';
 @import './components/card';
+@import './components/testimonial';
 
 @import './layout/grid';
 @import './layout/header';
