--- a/src/css/style.css
+++ b/src/css/style.css
@@ -323,6 +323,14 @@ body {
     font-size: 6rem;
     font-weight: 100; }
 
+.testimonial {
+  width: 75%;
+  margin: 0 auto;
+  box-shadow: 0 3rem 6rem rgba(0, 0, 0, 0.1);
+  background-color: #fff;
+  border-radius: 3px;
+  padding: 6rem; }
+
 .row {
   max-width: 114rem;
   margin: 0 auto; }
