--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -14,6 +14,7 @@
 @import './components/feature-box';
 @import './components/card';
 @import './components/testimonial';
+@import './components/bg-video';
 
 @import './layout/grid';
 @import './layout/header';
