--- a/src/sass/pages/_home.scss
+++ b/src/sass/pages/_home.scss
@@ -37,3 +37,7 @@
   padding: 25rem 0 15rem 0;
   margin-top: -10rem; // To cover up the white space left by the skewed section
 }
+
+.section-testimonials {
+  position: relative;
+}
